# anonimus-bot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yaml
src/: constants.rs  error.rs  main.rs
