[package]
name = "anonymous-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.15.0", features = ["full"]}
tokio = { version = "1.0", features = ["full"] }
redis = "0.31.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
dotenv = "0.15.0"
pretty_env_logger = "0.5.0"
log = "0.4.27"

[profile.release]
opt-level = 3
panic = "abort"